Product sorting done

--- a/src/app/components/product-loop/product-loop.component.html
+++ b/src/app/components/product-loop/product-loop.component.html
@@ -3,10 +3,20 @@
     <img [src]="product.images[0].src" class="card-img-top" [attr.alt]="product.images[0].alt">
   </a>
   <div class="card-body">
-    <h5 class="card-title" [innerHtml]="product.name"></h5>
-    <p class="card-text" [innerHtml]="product.short_description"></p>
-    <a [attr.href]="product.external_url" target="_blank" class="btn btn-primary" [innerText]="product.button_text"
-      *ngIf="product.external_url.length > 0"></a>
+    <a [routerLink]="['/product', product.id]" class="text-body text-decoration-none">
+      <h5 class="card-title" [innerHtml]="product.name"></h5>
+      <p class="card-text" [innerHtml]="product.short_description"></p>
+    </a>
+
+    <div [innerHTML]="product.price_html" class="mb-2">
+
+    </div>
+
+    <a [attr.href]="product.external_url" target="_blank" class="btn btn-primary"
+      [innerText]="product.button_text"
+      *ngIf="product.external_url.length > 0">
+    </a>
+
     <a class="btn btn-primary" *ngIf="product.external_url.length === 0">
       Add to cart
     </a>
